--- a/couchsurfing-app/index.html
+++ b/couchsurfing-app/index.html
@@ -15,6 +15,6 @@
 <div class="container">
   <h5 id="reviews"></h5>
 </div>
-<script src="app/index.pack.js"></script>
+<script src="app/index.js"></script>
 </body>
 </html>
